--- a/blooddoClient/package.json
+++ b/blooddoClient/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/socket.io-client": "^1.4.29",
     "angular2-esri-loader": "^1.0.0",
     "core-js": "^2.4.1",
     "esri-loader": "^1.0.0",
