--- a/blooddoServer/package.json
+++ b/blooddoServer/package.json
@@ -25,6 +25,7 @@
     "express": "^4.13.3",
     "joi": "^10.2.2",
     "mongoose": "^4.8.2",
+    "morgan": "^1.8.2",
     "socket.io": "^1.3.7"
   },
   "devDependencies": {
